# prism-api

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  lint.yml  unit_text.yml
app/: __init__.py  constants.py  main.py  utils.py
app/api/v1/: __init__.py  corporate.py  document.py  integration.py  organization.py  process.py  query.py  sync.py  user.py
app/connection/: __init__.py
app/enums/: FileOperation.py  IntegrationStatus.py  __init__.py
app/exceptions/: PrismAPIException.py  PrismDBException.py  PrismEmailException.py  PrismException.py  PrismIdentityException.py  PrismMergeException.py  __init__.py
app/models/: AccessControlModel.py  FileModel.py  OrganizationModel.py  RequestModels.py  ResponseModels.py  SyncFileModel.py  UserModel.py  WhitelistModel.py  __init__.py
app/pipeline/: CustomUnstructuredReader.py  DataIndexingService.py  DataPipelineService.py  DataPipelineServiceLocal.py  EmbedNodes.py  __init__.py
app/services/: CognitoService.py  SESService.py  __init__.py
app/storage/: DynamoDBService.py  MergeService.py  __init__.py
app/tasks/: IntegrationTask.py  __init__.py
local/: README.md
setup/: README.md
setup/ray/: ray.yaml
terraform/: .terraform.lock.hcl  backend.tf  iam.tf  main.tf  variables.tf  versions.tf
tests/: test.py
