[tool.poetry]
name = "prism-api"
version = "0.1.0"
description = "AI-driven knowledge management platform"
authors = ["hwuiwon <hwuiwon.kim@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
boto3 = "^1.28.16"
cohere = "^4.19.2"
fastapi = "^0.100.1"
langchain = {extras = ["llms"], version = "^0.0.251"}
llama-index = "^0.7.19"
mergepythonclient = "^0.2.1"
pymilvus = "^2.2.14"
python = "^3.10"
python-dotenv = "^1.0.0"
ray = {extras = ["default"], version = "^2.6.2"}
unstructured = {extras = ["csv", "doc", "docx", "html", "pdf", "ppt", "pptx", "rtf", "txt", "xlsx"], version = "^0.9.0"}
uvicorn = "^0.23.2"
websockets = "^11.0.3"
gpustat = "1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
pylint = "^2.17.5"
ruff = "^0.0.281"
isort = "^5.12.0"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
line-length = 100

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
